--- a/locale/ar_DZ/LC_MESSAGES/toArabic.po
+++ b/locale/ar_DZ/LC_MESSAGES/toArabic.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: try-git-ar\n"
 "POT-Creation-Date: 2014-05-03 15:48-0000\n"
-"PO-Revision-Date: 2014-05-03 20:00-0000\n"
+"PO-Revision-Date: 2014-05-03 20:17-0000\n"
 "Last-Translator: \n"
 "Language-Team: Arabicgit-team <arabicgit@gmail.com>\n"
 "Language: ar_DZ\n"
@@ -17,7 +17,7 @@ msgstr ""
 
 #: ../../../docs/initializing.php:2
 msgid "Got 15 minutes and want to learn Git?"
-msgstr "لديك 15 دقيقة و تريد تعلم Git"
+msgstr "لديك 15 دقيقة و تريد تعلم Git ؟"
 
 #: ../../../docs/initializing.php:5
 msgid ""
